Fix QR code image path

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <div class="carousel">
         <div class="slide">
           <img src="assets/images/photo1.jpg" alt="I will never hurt you again." />
-          <p>I will never hurt you again.💕</p>
+          <p>I will never hurt you again.</p>
         </div>
         <div class="slide">
           <img src="assets/images/photo2.jpg" alt="We won't never leave us alone." />
@@ -107,7 +107,7 @@
   </p>
 
   <div class="qr-box">
-    <img id="qrImage" alt="Scan to keep me with you">
+    <img src="assets/images/love_qr.png" alt="Scan to keep me with you"/>
   </div>
 
   <p class="qr-note">
